# chimarr

./: Cargo.toml  README.md
src/: config.rs  main.rs  notifications.rs
src/dispatchers/: discord.rs  mod.rs
src/event_sources/: radarr.rs
src/modules/: radarr.rs
src/routers/: radarr.rs
