[package]
name = "chimarr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
reqwest = "0.12.23"
serde = "1.0.226"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
